chore: rename vehicles search to vpic
